# pogoot

./: '  .env  .gitignore  README.md
.github/workflows/: rust.yml
compression_test/: Cargo.toml
compression_test/src/: main.rs
frontend/: .index.js.swp  index.html  index.js  style.css
frontend_beta/: package-lock.json  package.json
frontend_beta/client_commander/: index.html  index.js  script2.js  style.css
frontend_beta/client_player/: index.html  index.js  package.json
frontend_beta/proto/: pogoots_grpc_web_pb.js
full_frontend/: package-lock.json  package.json
full_frontend/pogootProtoV2/: astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  wrangler.toml
full_frontend/pogootProtoV2/.wrangler/tmp/bundle-57Uy9M/: middleware-loader.entry.ts
full_frontend/pogootProtoV2/.wrangler/tmp/bundle-JkRVmi/: middleware-insertion-facade.js  middleware-loader.entry.ts
full_frontend/pogootProtoV2/.wrangler/tmp/dev-BFY2az/: pages-shim.js  pages-shim.js.map
full_frontend/pogootProtoV2/.wrangler/tmp/dev-mWfy5n/: pages-shim.js  pages-shim.js.map
full_frontend/pogootProtoV2/public/: Cookies  Cookies.html  Privacy  Privacy.html  TOS  fonts.css
full_frontend/pogootProtoV2/public/js/: mdui.global.js
full_frontend/pogootProtoV2/src/: build.sh
full_frontend/pogootProtoV2/src/components/: AccountButton.astro  AlertBox.astro  CookieBanner.astro  LoginDialog.astro  NavBar.astro  Notecard.astro  SearchBar.astro
full_frontend/pogootProtoV2/src/layouts/: Layout.astro
full_frontend/pogootProtoV2/src/pages/: account.astro  create.astro  features.astro  forgotPassword.astro  index.astro  library.astro  pricing.astro  reactor.astro  report.astro  tools.astro
full_frontend/pogootProtoV2/src/pages/games/: cabo.astro  pacman.astro  presentation_builder.astro
full_frontend/pogootProtoV2/src/pages/notecards/: [id].astro  index.astro
full_frontend/pogootProtoV2/src/pages/notecards/[users]/: [id].astro
full_frontend/pogootProtoV2/src/pages/notecards/test/: [test].astro
full_frontend/pogootProtoV2/src/pages/policies/: returns.astro
full_frontend/pogootProtoV2/src/proto/: browserify.sh  client.js  home.js  library.js  login.js  notecard.js  notecards.js  package-lock.json  package.json  pogoots.proto  pogoots_grpc_web_pb.js  pogoots_pb.js  proto.sh  result.js  result_home.js  result_library.js  result_login.js  result_notecards.js
pogoot/: Cargo.toml
pogoot/src/: main.rs  requestTypes.rs  tests.rs  websocketHandlers.rs
pogootRefactored/: Cargo.toml
pogootRefactored/src/: login.rs  main.rs  notecard.rs  pogoot.rs  readme.md  util.rs
pogootRefactored/src/dataTypes/: config.rs  database.rs  mod.rs  state_storage.rs
pogootRefactoredRefactored/: Cargo.toml  CargoCross.toml  Cross.toml  Dockerfile  build.rs  commands.txt  copy_proto.sh  crossbuild.sh  push_to_aws.sh  pushtos3.sh
pogootRefactoredRefactored/proto/: pogoots.proto
pogootRefactoredRefactored/src/: baseify.sh  cfkey  cfpem  cloud_flare_key.key  cloud_flare_pem.pem  importantaws_command.txt  main.rs  pogoot_refactored_refactored.rs  todo.md
pogootRefactoredRefactored/src/central/: mod.rs
pogootRefactoredRefactored/src/core/: mod.rs
pogootRefactoredRefactored/src/dataTypes/: mod.rs  request_types.rs  storage_types.rs
pogootRefactoredRefactored/src/database/: mod.rs
pogootRefactoredRefactored/src/node/: mod.rs
pogootRefactoredRefactored/src/services/: CFStorage.rs  cfstorage.rs  database.rs  mod.rs  notecard.rs  pogoot.rs  server.rs  special_key_type.rs  user_manage.rs
pogootRefactoredRefactored/src/services/corporate/: datatypes.rs  mod.rs
pogootRefactoredRefactored/src/services/database/: mod.rs
pogootRefactoredRefactored/src/services/notecard/: mod.rs  server.rs  storage_controller.rs
pogootRefactoredRefactored/src/services/pogoot/: mod.rs
pogootRefactoredRefactored/src/services/supersystem/: mod.rs
pogootRefactoredRefactored/src/services/user_manage/: long_term_user_management.rs  mod.rs  permissions_management.rs  short_term_user_management.rs  user_management_datatypes.rs
pogoot_notecard_algorithm_basic/: Cargo.toml  quizProgress  quizProgressNewOld  quizlet.txt  words  wordsAltSpanish
pogoot_notecard_algorithm_basic/src/: main.rs
pogoot_notecard_algorithm_basic/used sets/: quizProgressNewNewNewOld  quizProgressNewNewOld  quizProgressold  quizletOld.txt  quizletnewnewold.txt  words  wordsAltSpanishOld  wordsEnglish  wordsEnglishOld
qdrantTest/qdrantTest/: Cargo.toml
qdrantTest/qdrantTest/src/: main.rs
sweeprs/: Cargo.toml  README.md  leptosfmt.toml  rust-analyzer.toml  rustfmt.toml
sweeprs-discontinued/src/: app.rs  lib.rs  main.rs
sweeprs/src/: app.rs
sweeprs/style/: main.scss
testFrontEnd/: index.html  index.js
wgpuFrontend/: Cargo.toml
wgpuFrontend/HTML/: index.html
wgpuFrontend/src/: lib.rs  main.rs
