[package]
name = "compression_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
flate2 = {version="1.0.28", features=["zlib-ng"]}
nanoid = "0.4.0"
rand = "0.8.5"
serde = {version="1.0.197", features=["derive"]}
serde_json = "1.0.114"
zstd = {version="0.13.0", features=["zdict_builder"]}
