[package]
name = "pogootRefactoredRefactored"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# aws-lc-rs = "1.8.1"
tonic = { version = "0.12.1", features = ["tls", "transport", "zstd", "gzip"] }
argon2 = "0.5.3"
futures = "0.3.30"
futures-util = "0.3.30"
serde = { version = "1.0.204", features = ["derive", "rc"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
async-std = "1.12.0"
chrono = { version = "0.4.38", features = ["serde"] }
tower-http = { version = "0.5.2", features = ["util", "add-extension", "cors"] }
uuid = { version = "1.10.0", features = [
  "v4",
  "serde",
  "macro-diagnostics",
  "fast-rng",
] }
reqwest = { version = "0.12.5", features = ["json"] }
openssl = { version = "0.10.66" } #, features = ["vendored"] 
rusqlite = { version = "0.31.0", features = ["bundled"] }
public-ip = "0.2.2"
enum-as-inner = "0.6.0"
aws-config = "1.5.4"
aws-sdk-secretsmanager = "1.40.0"
base64 = "0.22.1"
tonic-reflection = { version = "0.12.1" }
prost = "0.13.1"
tokio-stream = "0.1.15"
async-stream = "0.3.5"
aws-sdk-s3 = "1.42.0"
tonic-web = "0.12.1"
libsql = "0.3.5"
zstd = { version = "0.13.2", features = ["zdict_builder"] }
# tokio-rustls = "0.26.0"
http = "1.1.0"
# aws-lc-rs = { version = "1.8.1", features = [] }

[build-dependencies]
tonic-build = "0.12.1"
