[package]
name = "qdrantTest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
qdrant-client = "1.8.0"
reqwest =  { version = "0.11.18", default-features = false, features = ["json", "rustls-tls"] }
serde = {version = "1.0.198", features=["derive"]}
serde_json = "1.0.116"
tokio = {version= "1.37.0", features=["rt-multi-thread"]}
